objects/Sellable_Item_Product__c.object
<CustomObject>
    <fields>
        <fullName>APN_Auto_Number1__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>APN Auto Number1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>APN_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>For PureEngage/3GPxxxx format part numbers, leave this field blank, the system will auto-populate a new number. For PureConnect-style part numbers (ex. &quot;SW-015-4.0-AA02”) enter the part number that Product Management has created and save.</inlineHelpText>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up-rev</fullName>
                </value>
                <value>
                    <fullName>Planned EOL</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters, entered at the Base Item.   For any other info.</inlineHelpText>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anchor_Product__c</fullName>
        <formula>Base_Item__r.Anchor_Product__c</formula>
        <inlineHelpText>Anchor products are those that would be considered a primary or prerequisite product in the group that customers must purchase and appears first in the quoting tool.  Pricing Manager will select the anchor for each product group</inlineHelpText>
        <label>Anchor Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Availability indicates whether the sellable item is available for shipment. This field is not filled in by the Product Manager when creating a new Sellable Item; it is populated by Software Delivery based on the stage of the work flow for each sellable item.

Once the sellable item has an Item number (a.k.a. Part Number) assigned and the &quot;Availability&quot; flag is marked as &quot;Active&quot; no modifications to the name of this sellable item are permitted.  Otherwise, NETSUITE will be out of sync.</description>
        <inlineHelpText>Defined by the item status in the release process.  

Availability indicates whether the sellable item is available for shipment.  Please see the Field Glossary link at the top of the page for more details.</inlineHelpText>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EOL</fullName>
                </value>
                <value>
                    <fullName>BOM Update</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Marked for deletion in ERP</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>ERP Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the Base Item upon which sellable items are built. Important: The Base Item must be used for only one Sellable Item (and versions of that sellable item).</inlineHelpText>
        <label>Base Item</label>
        <referenceTo>Base_Item_Product__c</referenceTo>
        <relationshipLabel>Sellable Items</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <label>Billing Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core Service Fees</fullName>
                </value>
                <value>
                    <fullName>Telco Services</fullName>
                </value>
                <value>
                    <fullName>Taxes and Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Block__c</fullName>
        <formula>TEXT(Base_Item__r.Building_Block__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set at the Base Item level. This field needs to be populated in order for the Quoting Tool to identify where to place the sellable item in Product Configurator. If this field is not populated, sellable item(s) will not show up in Quote output file.</inlineHelpText>
        <label>Building Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COGS Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (COGS Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Genesys Care</fullName>
                </value>
                <value>
                    <fullName>DO NOT INCLUDE</fullName>
                </value>
                <value>
                    <fullName>Genesys University</fullName>
                </value>
                <value>
                    <fullName>Cross Channel</fullName>
                </value>
                <value>
                    <fullName>Performance Management</fullName>
                </value>
                <value>
                    <fullName>Core Platforms</fullName>
                </value>
                <value>
                    <fullName>Resource Optimization</fullName>
                </value>
                <value>
                    <fullName>PARTS SEARCH</fullName>
                </value>
                <value>
                    <fullName>Business Edition Cloud</fullName>
                </value>
                <value>
                    <fullName>Business Edition Premise</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition Cloud</fullName>
                </value>
                <value>
                    <fullName>Premier Edition Cloud</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Proactive Communications</fullName>
                </value>
                <value>
                    <fullName>Mobile Marketing</fullName>
                </value>
                <value>
                    <fullName>Cloud WFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Cloned From)</relationshipLabel>
        <relationshipName>Sellable_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Asset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Asset Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Contract Asset Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Impairment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Impairment Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Contract Impairment Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria_for_Control__c</fullName>
        <inlineHelpText>Provides additional detail (if needed) on Shipping Control.</inlineHelpText>
        <label>Criteria for Control</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCOGS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCOGS Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (DCOGS Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeferredRevenueAccount__c</fullName>
        <label>Deferred Revenue Account </label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>205112-Genesys Deferred Rev-License (System)</fullName>
                </value>
                <value>
                    <fullName>205114-Genesys Deferred Rev- Maint. (System)</fullName>
                </value>
                <value>
                    <fullName>205115-Genesys Deferred Rev - HW Maint</fullName>
                </value>
                <value>
                    <fullName>205116-Genesys Deferred Rev-PS (System)</fullName>
                </value>
                <value>
                    <fullName>205118-Deferred Revenue Maint - Consumption Tax (Japan)</fullName>
                </value>
                <value>
                    <fullName>205119-Genesys Deferred Rev - PPU (System)</fullName>
                </value>
                <value>
                    <fullName>205120-Genesys Deferred Rev-Educ/Training  (System)</fullName>
                </value>
                <value>
                    <fullName>205122-PureEngage Deferred Rev Subscription Fees</fullName>
                </value>
                <value>
                    <fullName>205123-PureEngage Deferred Rev PureSuccess-Care</fullName>
                </value>
                <value>
                    <fullName>205124-PureEngage Deferred Rev PureSuccess-PS</fullName>
                </value>
                <value>
                    <fullName>205125-PureEngage Deferred Rev PureSuccess-EDU</fullName>
                </value>
                <value>
                    <fullName>205130-Genesys Deferred Rev-License (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205131-Genesys Deferred Rev-Ratable Lic</fullName>
                </value>
                <value>
                    <fullName>205132-Genesys Deferred Rev-Maint. (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205134-Genesys Deferred Rev-PS  (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205138-Genesys Deferred Rev-Educ./Training (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205139-Genesys Deferred Rev - PPU (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205140-Deferred Revenue-2% Gu Training Credit</fullName>
                </value>
                <value>
                    <fullName>205142-Deferred Revenue Subscriptions - Angel/Echopass</fullName>
                </value>
                <value>
                    <fullName>205144-Deferred Revenue Maintenance - Angel</fullName>
                </value>
                <value>
                    <fullName>205146-Deferred Revenue PS - Angel</fullName>
                </value>
                <value>
                    <fullName>205148-Deferred hardware on Business Edition Premise and Talkr</fullName>
                </value>
                <value>
                    <fullName>205150-Deferred Telco Revenue</fullName>
                </value>
                <value>
                    <fullName>205151-Deferred Rev-SaaS Educ/Training (Non-System)</fullName>
                </value>
                <value>
                    <fullName>205168-Deferred Revenue - Interco (Speechstorm)</fullName>
                </value>
                <value>
                    <fullName>205169-Deferred Revenue - Interco (Silver Lining)</fullName>
                </value>
                <value>
                    <fullName>205171-Deferred Revenue - PS - SDBT</fullName>
                </value>
                <value>
                    <fullName>205172-Deferred Revenue - Subscriptions - SDBT</fullName>
                </value>
                <value>
                    <fullName>205173-Deferred Revenue - Other - SDBT</fullName>
                </value>
                <value>
                    <fullName>205180-Genesys Deferred Rev - Platform on Demand Subs Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Account_lu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Netsuite_Type__c</field>
                <operation>equals</operation>
                <value>Deferred Revenue</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product</relationshipLabel>
        <relationshipName>Sellable_Items_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Whether product is discountable
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECCN_GB__c</fullName>
        <defaultValue>&apos;ECL99&apos;</defaultValue>
        <inlineHelpText>This field is for information only and shows the ECCNs applicable to CD/DVDs in the BOM of a sellable item.</inlineHelpText>
        <label>ECCN GB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_NL__c</fullName>
        <defaultValue>&apos;ECL99&apos;</defaultValue>
        <inlineHelpText>This field is for information only and shows the ECCNs applicable to CD/DVDs in the BOM of a sellable item.</inlineHelpText>
        <label>ECCN NL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN_US__c</fullName>
        <defaultValue>&apos;EAR99&apos;</defaultValue>
        <inlineHelpText>This field is for information only and shows the ECCNs applicable to CD/DVDs in the BOM of a sellable item.</inlineHelpText>
        <label>ECCN US</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Class__c</fullName>
        <inlineHelpText>Required for reporting purposes in Cognos. Genesys standard product material items, are defined by “Core”. If there may be a need to track these materials for reporting based on any choice other than “Core”, choose that category. Otherwise choose “Core”.</inlineHelpText>
        <label>ERP Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>Canaplus</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Soundbite</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
                <value>
                    <fullName>Utopy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Education_Type__c</fullName>
        <inlineHelpText>This is to be specified only for GU items. Please list the type of education course based on the description available. Choose one designation per material. Please note that this field should be left blank for non-education materials.</inlineHelpText>
        <label>ERP Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Class</fullName>
                </value>
                <value>
                    <fullName>On-site</fullName>
                </value>
                <value>
                    <fullName>Partner led</fullName>
                </value>
                <value>
                    <fullName>Computer based</fullName>
                </value>
                <value>
                    <fullName>Self study</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERP Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_O_L_Announcement__c</fullName>
        <inlineHelpText>The date on which the EOL Announcement was made.

Release Management Team enters data with guidance from Product Managers.</inlineHelpText>
        <label>EOL Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronictaxcode__c</fullName>
        <inlineHelpText>LICENSE DC010500
MAINTENANCE		SC100122
PS  SC070101
GU	SC080301
PPU		DC010500
Cloud Srvcs  SW054001
Cloud/Remote Storage		DC070000
Royalty Fees 	OR070000
Reimbursed Travel Expenses		OT010100
NONTAXABLE ON030000
Sub SC100222
SW Imp SC070121</inlineHelpText>
        <label>Electronic tax code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC010500</fullName>
                </value>
                <value>
                    <fullName>SC100122</fullName>
                </value>
                <value>
                    <fullName>SC070101</fullName>
                </value>
                <value>
                    <fullName>SC080301</fullName>
                </value>
                <value>
                    <fullName>SW054001</fullName>
                </value>
                <value>
                    <fullName>DC070000</fullName>
                </value>
                <value>
                    <fullName>OR070000</fullName>
                </value>
                <value>
                    <fullName>OT010100</fullName>
                </value>
                <value>
                    <fullName>SC070121</fullName>
                </value>
                <value>
                    <fullName>SC100222</fullName>
                </value>
                <value>
                    <fullName>ON030000</fullName>
                </value>
                <value>
                    <fullName>FR020000</fullName>
                </value>
                <value>
                    <fullName>PC080000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_for_EMEA_Quantity_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only applicable for Old Pricing.  Eligible for EMEA Quantity Disc. field is only changed by the Pricing Manager.</inlineHelpText>
        <label>Eligible for EMEA Qty Discount (Old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Of_Support__c</fullName>
        <inlineHelpText>Last date for Technical Support for this item.

Release Management Team enters data with guidance from Product Managers.</inlineHelpText>
        <label>End of Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Maintenance__c</fullName>
        <inlineHelpText>From this date no software releases (e.g. fixes, updates, etc) will be available for an EOL product.</inlineHelpText>
        <label>End of Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Comments__c</fullName>
        <description>Indicates the nature of the change. 
If a sellable item is simply a version upgrade, no information is required here.
If the item is part of a complex transition, additional details must be provided, including applicable mapping (ex: CCON to Infomart, ICS to Multi-Media) and an explanation of the change.

Maximum length: 500 characters.</description>
        <inlineHelpText>Use this field to explain any entitlement changes as a result of migrations or complex product transition.  For example, for product splits or consolidations, describe what existing customer would be entitled to migrate to, any quantity ratios, etc.</inlineHelpText>
        <label>Entitlement Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <description>Describes whether a sellable item is an up-rev from a previous version, or a new/revised product which replaces an older product. Available options are:
New sellable item = for brand new that did not exist in a previous release.
Simple version increment = one to one relationship from the prior version to the current version.  For more information on prior version, see “Predecessor”.
Complex Product Transition = Anything other than “Simple Version Increment”
Examples: brand new sellable items, splitting or combining sellable items, CD (Package Content Info) changes, quantity/bundling changes, compatibility changes with other products, licensing changes, name changes.</description>
        <inlineHelpText>Describes whether a sellable item is an up-rev from a previous version, or a new/revised product which replaces an older product.

Please see the Field Glossary link at the top of the page for more details.</inlineHelpText>
        <label>Entitlement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Version Increment</fullName>
                </value>
                <value>
                    <fullName>Complex Product Transition</fullName>
                </value>
                <value>
                    <fullName>New Sellable Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment indicates type of environment: Production, Lab, HA, Disaster Recovery</description>
        <inlineHelpText>Choose correct use in the customer environment by the customer from the dropdown.</inlineHelpText>
        <label>Environment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>High Availability</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Version__c</fullName>
        <formula>New_Family__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Genesys Release Number. The third digit for new Sellable Items should be zero.

The Family field is only used for the Sellable Item Disposition and Staging.</inlineHelpText>
        <label>Family</label>
        <referenceTo>Sellable_Item_Family__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Family)</relationshipLabel>
        <relationshipName>Sellable_Items_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FedRAMP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Details: Used to indicate that a product is to be included in FedRAMP. Checked products will be included in FR instance. 
Owned By: FedRAMP Integration 
Downstream Impact: Changes may affect FR product integration.</description>
        <inlineHelpText>Check to indicate this product is to be included in FedRAMP.</inlineHelpText>
        <label>FedRAMP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flavors__c</fullName>
        <inlineHelpText>This field is used to track different flavors of a sellable item without creating separate sellable items:
   Example:
      Inbound Voice
      Two flavors: Cisco UCM and Broadsoft

Enter as: Cisco UCM; Broadsoft</inlineHelpText>
        <label>Flavors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INCOMEACCOUNT__c</fullName>
        <label>INCOME ACCOUNT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>500011-Dom Hardware Revenue (System)</fullName>
                </value>
                <value>
                    <fullName>500012-Dom Hardware Revenue (Non System)</fullName>
                </value>
                <value>
                    <fullName>500013-Export Hardware Revenue (System)</fullName>
                </value>
                <value>
                    <fullName>500014-Export Hardware Revenue (Non System)</fullName>
                </value>
                <value>
                    <fullName>500020-Dom Software License Rev - System</fullName>
                </value>
                <value>
                    <fullName>500022-Dom Software License Rev (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500041-Export Software License Rev - System</fullName>
                </value>
                <value>
                    <fullName>500042-Export Software License Rev (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500044-Customer Discounts - Licenses</fullName>
                </value>
                <value>
                    <fullName>500050-OEM and Royalty Revenue</fullName>
                </value>
                <value>
                    <fullName>500053-Other Non Operating Rev</fullName>
                </value>
                <value>
                    <fullName>500100-Dom Support Services Rev - System</fullName>
                </value>
                <value>
                    <fullName>500101-HW Support Services Revenue</fullName>
                </value>
                <value>
                    <fullName>500103-Export Support Services Rev - System</fullName>
                </value>
                <value>
                    <fullName>500105-Dom Support Services Rev (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500106-Export Support Services Rev Gen (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500108-Customer Discounts - Maintenance</fullName>
                </value>
                <value>
                    <fullName>500112-PureEngage Subscription Fees Rev</fullName>
                </value>
                <value>
                    <fullName>500113-PureEngage PureSuccess-Care Rev</fullName>
                </value>
                <value>
                    <fullName>500114-PureEngage PureSuccess-PS Rev</fullName>
                </value>
                <value>
                    <fullName>500115-PureEngage PureSuccess-EDU Rev</fullName>
                </value>
                <value>
                    <fullName>500124-Dom Training Rev Gen - System</fullName>
                </value>
                <value>
                    <fullName>500126-Dom Training Rev Gen (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500128-Dom Prof Svcs Rev Gen - System</fullName>
                </value>
                <value>
                    <fullName>500130-Dom Prof Svcs Rev Gen (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500136-Export Training Rev Gen - System</fullName>
                </value>
                <value>
                    <fullName>500138-Export Training Rev Gen (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500140-Export Prof Svcs Rev Gen - System</fullName>
                </value>
                <value>
                    <fullName>500142-Export Prof Svcs Rev Gen (Non-System)</fullName>
                </value>
                <value>
                    <fullName>500145-Customer Discounts - PS &amp; Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_In_CMRR_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Whether it&apos;s a Monthly Recurring Revenue
Downstream Impact? Impacts quoting tool. ETL syncs the value.
Which department is owner? Product/Offer Management</description>
        <label>Include In CMRR Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Account_lu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Netsuite_Type__c</field>
                <operation>equals</operation>
                <value>Income</value>
            </filterItems>
            <filterItems>
                <field>GL_Account__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Income Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (Intercompany Account)</relationshipLabel>
        <relationshipName>Sellable_Items_Product6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternationalSuretaxCode__c</fullName>
        <label>International Suretax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterstateSuretaxCode__c</fullName>
        <label>Interstate Suretax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntrastateSuretaxCode__c</fullName>
        <label>Intrastate Suretax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPricingCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPricing Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LT_Contract_Asset_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LT Contract Asset Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (LT Contract Asset Account)</relationshipLabel>
        <relationshipName>Sellable_Items_ProductO5fn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LT_Contract_Liability_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LT Contract Liability Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Sellable Items - Product (LT Contract Liability Account)</relationshipLabel>
        <relationshipName>Sellable_Items_ProductO5fJ</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>